--- a/client/src/Components/AboutUsPage/aboutUs.css
+++ b/client/src/Components/AboutUsPage/aboutUs.css
@@ -1,27 +1,36 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
+
 .root-card-class {
     background: #ececec;
     display: flex;
-
+    width: 100%;
+    height: 100%;
 
 }
 
 .our-story-img {
     margin-top: 50px;
     margin-bottom: 50px;
-
     margin-right: 50px;
+    width: 100%;
+
 }
 
 .our-story-heading {
+    width: 100%;
     margin-top: 70px;
-    margin-left: 300px;
+    margin-left: 150px;
     font-size: xx-large;
     font-family: math;
     /* text-shadow: .1em .1em 0 hsl(200 50% 30%); */
 }
 
 .our-story-text {
-    margin-left: 100px;
-    margin-right: 100px;
+    margin-left: 150px;
+    margin-right: 150px;
 
 }
