--- a/client/src/Components/AboutUsPage/aboutUs.css
+++ b/client/src/Components/AboutUsPage/aboutUs.css
@@ -22,7 +22,7 @@
 /* end of css mobile version */
 
 /* css for descktop version */
-.root-card-class {
+.root-card-class-desktop {
     background: #ececec;
     display: flex;
     width: 100%;
@@ -42,14 +42,14 @@
     object-fit: cover;
 }
 
-.our-story-heading {
+.our-story-heading-desktop {
     margin-top: 70px;
     font-size: xx-large;
     font-family: math;
     /* text-shadow: .1em .1em 0 hsl(200 50% 30%); */
 }
 
-.our-story-text {
+.our-story-text-desktop {
     text-align: center;
     margin-left: 50px;
     margin-right: 50px;
@@ -57,3 +57,23 @@
 }
 
 /* end of css for desktop */
+
+/* css for tablets */
+.root-card-class-tablet {
+    background: #ffb0b0;
+    display: block;
+
+}
+
+.our-story-heading-tablet {
+    font-size: xxx-large;
+    font-family: math;
+    margin-bottom: 20px;
+}
+
+.our-story-text-tablet {
+    text-align: center;
+    margin-left: 20px;
+    margin-right: 20px;
+
+}
