--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,12 @@
   text-align: center;
 }
 
+.content{
+  height: 560px;
+  background:#ececec
+
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -36,3 +42,5 @@
     transform: rotate(360deg);
   }
 }
+
+
