--- a/client/src/Components/core/NavigationBar/NavigationBar.css
+++ b/client/src/Components/core/NavigationBar/NavigationBar.css
@@ -1,22 +1,29 @@
-/* .navigation-bar {
-    display: inline-block;
-} */
-
-
-
-.menuTwo {
-     margin-left: 200px;
+.nav-bar{
+    margin-left: 27em
 }
 
-.menuThree {
-
- margin-right: 100px;
+.nav-bar-ul-list {
+    display: flex;
 }
 
+.nav-bar-ul-list li {
+    list-style-type: none;
+    margin-right: 20px;
+    margin-top: 15px;
+}
 
+.nav-bar-ul-list a {
+    text-decoration: none;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    box-shadow: inset 0 0 0 0 #54b3d6;
+    color: #54b3d6;
+    margin: 0 -.25rem;
+    padding: 0 .25rem;
+    transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
 
-/* 
-.menuOne {
-    margin-right: auto;
-    display: inline-block;
-} */
+}
+
+a:hover {
+    box-shadow: inset 100px 0 0 0 #54b3d6;
+    color: white;
+}
