--- a/client/src/Components/ProfilePage/profile-page.css
+++ b/client/src/Components/ProfilePage/profile-page.css
@@ -10,7 +10,7 @@
 }
 
 .user-profile-heading {
-    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     text-align: center;
 }
 
@@ -32,4 +32,17 @@ h3 {
     text-align: left;
     margin-top: 20px;
     margin-left: 50px;
+}
+
+.my-pets-button {
+    margin-top: 20px;
+    background-color: #ffffff;
+    border-radius: 32px;
+    border: 1px solid green;
+
+}
+
+
+button:active {
+    color: green;
 }
