--- a/client/src/Components/ProfilePage/profile-page.css
+++ b/client/src/Components/ProfilePage/profile-page.css
@@ -10,34 +10,42 @@
 }
 
 .user-profile-heading {
-    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     text-align: center;
 }
 
 .card {
+    margin-top: 20px;
+
     background-color: #C6E5F1;
     border-radius: 32px;
-    border: 2px solid black;
     width: 250px;
-    height: 400px;
+    height: 370px;
     text-align: center;
-
+   
+    border: solid 2px #C6E5F1;
+    background-color: aliceblue;
+    margin-left: 25px;
+    box-shadow: 1px 1px 2px black, 0 0 25px #171425, 0 0 5px #686d67;
 }
 
-h3 {
-    margin-top: 15px;
+a{
+    text-decoration: none;
 }
+
 
 .user-info {
     text-align: left;
-    margin-top: 20px;
+    margin-top: 10px;
     margin-left: 50px;
 }
 
-.my-pets-button{
+.my-pets-button {
+    text-decoration: none;
     border-radius: 32px;
 
 }
+
 .my-pets-button {
     margin-top: 10px;
     font-size: 24px;
@@ -49,12 +57,14 @@ h3 {
     border: none;
     border-radius: 15px;
     box-shadow: 0 9px #999;
-  }
-  
-  .my-pets-button:hover {background-color: #8b61d9}
-  
-  .my-pets-button:active {
-    background-color:   #8b61d9;
+}
+
+.my-pets-button:hover {
+    background-color: #8b61d9
+}
+
+.my-pets-button:active {
+    background-color: #8b61d9;
     box-shadow: 0 5px #666;
     transform: translateY(4px);
-  }
+}
