--- a/client/src/Components/PetsCatalog/PetsCard/petsCard.css
+++ b/client/src/Components/PetsCatalog/PetsCard/petsCard.css
@@ -1,6 +1,12 @@
-h2 {
+/* h2 {
+    
     text-align: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+} */
+
+#petHeadig-class{
+    text-align: center;
+    padding-top: 10px;
 }
 
 #pet-card {
