--- a/client/src/Components/CreatePetPage/createPetPage.css
+++ b/client/src/Components/CreatePetPage/createPetPage.css
@@ -30,7 +30,8 @@
     padding: 0px;
     text-align: center;
     margin-top: 20px;
-    text-shadow: 2px 3px 5px black;
+    color: #171425;
+    /* text-shadow: 2px 3px 5px black; */
     box-shadow: 2px 1px 10px #54B3D6;
 }
 
