--- a/client/src/Components/auth/LoginPage/loginPage.css
+++ b/client/src/Components/auth/LoginPage/loginPage.css
@@ -1,6 +1,34 @@
 .inside-login-card {
-    background: #ececec;
+    background: #F0F8FF;
 
+}
+
+.login-heading-class{
+    padding-top: 40px;
+}
+
+.login-button-class{
+    width: 150px;
+    border-radius: 20px;
+    border: 2px solid black;
+    color: white;
+    background: #F0F8FF;
+    padding: 0px;
+    text-align: center;
+    margin-top: 20px;
+    color: #171425;
+   
+    box-shadow: 2px 1px 10px #54B3D6;
+    margin-bottom: 20px;
+}
+
+.input-login-class-desktop {
+    text-align: center;
+    border-radius: 20px;
+}
+
+.input-login-class:active {
+    box-shadow: 2px 3px 10px black;
 }
 
 .login-card-desktop {
@@ -9,9 +37,20 @@
 }
 
 .form-class-login-desktop {
-    display: inline-grid;
-    margin-top: 150px;
+    width: 250px;
+    border-radius: 20px;
+    border: 2px solid black;
+    color: white;
+    background: #F0F8FF;
+    padding: 0px;
+    text-align: center;
+    margin-top: 20px;
+    color: #171425;
+    box-shadow: 2px 1px 10px #54B3D6;
 }
+
+
+
 
 /* css for tablet */
 
