--- a/client/src/Components/AboutUsPage/aboutUs.css
+++ b/client/src/Components/AboutUsPage/aboutUs.css
@@ -23,17 +23,24 @@
 
 /* css for descktop version */
 .root-card-class-desktop {
-    background: #ececec;
     display: flex;
     width: 100%;
 
+}
+
+.pets-about-us-wraper {
+    margin: 55px;
+    height: 450px;
+    border: solid 2px #C6E5F1;
+    border-radius: 20px;
+    background: rgba(150, 197, 217, 0.36);
 }
 
 .our-story-img {
     width: 100%;
     margin-top: 50px;
     margin-bottom: 50px;
-    margin-right: 20px;
+    margin-right: 50px;
 
 }
 
@@ -44,7 +51,7 @@
 }
 
 .our-story-heading-desktop {
-    margin-top: 70px;
+    margin-top: 20px;
     font-size: xx-large;
     font-family: math;
     /* text-shadow: .1em .1em 0 hsl(200 50% 30%); */
