--- a/client/src/Components/auth/LoginPage/loginPage.css
+++ b/client/src/Components/auth/LoginPage/loginPage.css
@@ -22,6 +22,10 @@
     margin-bottom: 20px;
 }
 
+.login-button-class:active {
+    box-shadow: 2px 3px 5px black;
+}
+
 .input-login-class-desktop {
     text-align: center;
     border-radius: 20px;
@@ -41,7 +45,7 @@
     border-radius: 20px;
     border: 2px solid black;
     color: white;
-   background: #F0F8FF;
+    background: #F0F8FF;
     padding: 0px;
     text-align: center;
     margin-top: 20px;
