--- a/client/src/Components/ProfileComponents/CreatePetPage/createPetPage.css
+++ b/client/src/Components/ProfileComponents/CreatePetPage/createPetPage.css
@@ -47,7 +47,7 @@
     background-color: #C6E5F1;
     border-radius: 32px;
     width: 250px;
-    height: 440px;
+    height: auto;
     text-align: center;
 
     border: solid 2px #C6E5F1;
