--- a/client/src/Components/ProfileComponents/PetsCatalog/PetsCard/petsCard.css
+++ b/client/src/Components/ProfileComponents/PetsCatalog/PetsCard/petsCard.css
@@ -3,7 +3,14 @@
     text-align: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 } */
-
+.sk-chase-dot {
+    width: 100%;
+height: 100%;
+position: absolute;
+left: 0;
+top: 0;
+animation: sk-chase-dot 2.0s infinite ease-in-out both; 
+}
 
 .pet-label-class{
     font-weight: bold;;
