--- a/client/src/Components/ProfileComponents/ProfilePage/profile-page.css
+++ b/client/src/Components/ProfileComponents/ProfilePage/profile-page.css
@@ -77,3 +77,14 @@
 .my-pets-button:active {
     box-shadow: 2px 3px 5px black;
 }
+.loader {
+  
+
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 16px solid #3498db;
+    width: 120px;
+    height: 120px;
+    -webkit-animation: spin 2s linear infinite; /* Safari */
+    animation: spin 2s linear infinite;
+  }
