--- a/client/src/Components/ProfileComponents/PetsCatalog/PetsCard/petsCard.css
+++ b/client/src/Components/ProfileComponents/PetsCatalog/PetsCard/petsCard.css
@@ -67,3 +67,24 @@ animation: sk-chase-dot 2.0s infinite ease-in-out both;
     box-shadow: 2px 3px 5px black;
 
 }
+
+.loader-wraper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.loader {
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 16px solid #3498db;
+    width: 120px;
+    height: 120px;
+
+
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
