--- a/client/src/Components/ProfileComponents/ProfilePage/profile-page.css
+++ b/client/src/Components/ProfileComponents/ProfilePage/profile-page.css
@@ -8,7 +8,8 @@
     margin-top: 20px;
     clip-path: circle()
 }
-.profile-img-class{
+
+.profile-img-class {
     width: 100px;
     height: 100px;
 }
@@ -77,14 +78,21 @@
 .my-pets-button:active {
     box-shadow: 2px 3px 5px black;
 }
-.loader {
-  
 
+
+.loader-wraper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.loader {
     border: 16px solid #f3f3f3;
     border-radius: 50%;
     border-top: 16px solid #3498db;
     width: 120px;
     height: 120px;
-    -webkit-animation: spin 2s linear infinite; /* Safari */
+    -webkit-animation: spin 2s linear infinite;
+    /* Safari */
     animation: spin 2s linear infinite;
-  }
+}
