--- a/client/src/Components/ProfileComponents/PetsCatalog/petsCatalog.css
+++ b/client/src/Components/ProfileComponents/PetsCatalog/petsCatalog.css
@@ -83,7 +83,7 @@
 }
 
 .loader {
-  
+    
 
     border: 16px solid #f3f3f3;
     border-radius: 50%;
@@ -92,4 +92,10 @@
     height: 120px;
     -webkit-animation: spin 2s linear infinite; /* Safari */
     animation: spin 2s linear infinite;
+  }
+
+  
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
   }
