--- a/client/src/Components/ProfileComponents/PetsCatalog/PetsCard/petsCard.css
+++ b/client/src/Components/ProfileComponents/PetsCatalog/PetsCard/petsCard.css
@@ -19,6 +19,15 @@ animation: sk-chase-dot 2.0s infinite ease-in-out both;
 .pet-info-wraper{
     text-align: center;
 }
+.pet-card-button{
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 10px;
+    border-radius: 20px;
+    text-align: center;
+    border: solid 2px #C6E5F1;
+
+}
 
 #petHeadig-class{
     text-align: center;
@@ -28,8 +37,9 @@ animation: sk-chase-dot 2.0s infinite ease-in-out both;
     border-radius: 20px;
     border: solid 2px #C6E5F1;
     background-color: aliceblue;
+    height: auto;
     width: 200px;
-    height: 460px;
+    /* height: 430px; */
     margin-left: 25px;
     box-shadow: 1px 1px 2px black, 0 0 25px #171425, 0 0 5px #686d67;
 }
@@ -51,19 +61,19 @@ animation: sk-chase-dot 2.0s infinite ease-in-out both;
     border: solid 2px #C6E5F1;
 }
 
-#pet-card-buttons {
+.pet-card-buttons {
     text-align: center;
 }
 
 #pet-card-button {
     margin-left: 20px;
     margin-right: 20px;
-    margin-top: 2px;
+    margin-top: 10px;
     border-radius: 20px;
     text-align: center;
     border: solid 2px #C6E5F1;
 }
-#pet-card-button:active{
+.pet-card-button:active{
     box-shadow: 2px 3px 5px black;
 
 }
