--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,34 +1,12 @@
-.App {
-  text-align: center;
-}
+@media only screen and (max-width: 768px) {
 
-.content {
-  height: 560px;
-  background-color: #ececec;
+
+
+
 }
 
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
 .App-link {
   color: #61dafb;
@@ -51,11 +29,8 @@
   margin-top: auto;
 }
 
-body {
- height: auto; 
-}
 
-.content{
+.content {
   height: auto;
   width: auto;
 }
