update navigation bar

--- a/client/src/Components/core/NavigationBar/NavigationBar.css
+++ b/client/src/Components/core/NavigationBar/NavigationBar.css
@@ -133,12 +133,7 @@ a:hover {
     width: 30%;
 }
 
-.burger-desktop div {
-    width: 25px;
-    background-color: white;
-    height: 3px;
-    margin: 5px;
-}
+
 
 /* .burger-desktop {
   
@@ -157,6 +152,7 @@ a:hover {
 }
 
 @media only screen and (max-width: 760px) {
+
 
     body {
         overflow-x: hidden;
@@ -189,6 +185,43 @@ a:hover {
 
     .nav-active {
         transform: translateX(0%);
+    }
+
+
+    .burger-desktop div {
+
+        width: 25px;
+        background-color: white;
+        height: 3px;
+        margin: 5px;
+    }
+
+
+    @keyframes navLinkFade {
+
+        from {
+            opacity: 0;
+            transform: translateX(50px);
+        }
+
+        to {
+            opacity: 1;
+            transform: translateX(0px);
+        }
+
+    }
+
+    .toggle .line1 {
+        transform: rotate(-45deg) translate(-5px, -6px);
+    }
+
+    .toggle .line2 {
+        opacity: 0;
+    }
+
+    .toggle .line3 {
+        transform: rotate(45deg) translate(-5px, -6px);
+
     }
 
 
