--- a/client/src/Components/core/NavigationBar/NavigationBar.css
+++ b/client/src/Components/core/NavigationBar/NavigationBar.css
@@ -1,101 +1,3 @@
-.nav-bar-desktop {
-    margin-left: 27em
-}
-
-.nav-bar-ul-list-desktop {
-    display: flex;
-}
-
-.nav-bar-ul-list-desktop li {
-    list-style-type: none;
-    margin-right: 20px;
-    margin-top: 15px;
-}
-
-.nav-bar-ul-list-desktop a {
-    text-decoration: none;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    box-shadow: inset 0 0 0 0 #54b3d6;
-    color: #54b3d6;
-    margin: 0 -.25rem;
-    padding: 0 .25rem;
-    transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
-
-}
-
-a:hover {
-    box-shadow: inset 100px 0 0 0 #54b3d6;
-    color: white;
-}
-
-/* css for tablet */
-
-
-
-
-.nav-bar-tablet {
-    margin-left: 0;
-}
-
-.nav-bar-tablet ul {
-    display: none;
-}
-
-.nav-bar-ul-list-tablet {
-    display: block;
-    text-align: center;
-}
-
-.nav-bar-ul-list-tablet li {
-    list-style-type: none;
-    margin-right: 20px;
-    margin-top: 15px;
-}
-
-.nav-bar-ul-list-tablet a {
-    text-decoration: none;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    box-shadow: inset 0 0 0 0 #54b3d6;
-    color: #54b3d6;
-    margin: 0 -.25rem;
-    padding: 0 .25rem;
-    transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
-
-}
-
-a:hover {
-    box-shadow: inset 100px 0 0 0 #54b3d6;
-    color: white;
-
-}
-
-.icon button {
-    border: 0px;
-    border-radius: 20%;
-    text-decoration: none;
-    background-color: #54b3d6;
-    /* box-shadow: inset 100px 0 0 0 #54b3d6; */
-    color: white;
-
-}
-
-.icon button:active {
-    box-shadow: 2px 3px 5px black;
-}
-
-
-.icon {
-    position: absolute;
-    top: 3px;
-    float: right;
-    font-size: 30px;
-
-}
-
-
-
-/* // NEXT LEVEL CSS */
-
 * {
     margin: 0;
     padding: 0;
@@ -108,6 +10,8 @@ a:hover {
     align-items: center;
     min-width: 8vh;
     background-color: #54b3d6;
+    border: 1px solid;
+    box-shadow: 0px 5px 10px 10px lightblue;
 }
 
 .logo {
@@ -123,14 +27,22 @@ a:hover {
     text-decoration: none;
 }
 
+.navigation-bar a:hover {
+    color: white;
+    
+}
+
+
+
 .navigation-bar ul li {
     list-style: none;
 }
 
 .nav-links-desktop {
+    margin-top: 15px;
     display: flex;
     justify-content: space-around;
-    width: 30%;
+    width: 50%;
 }
 
 
@@ -145,7 +57,7 @@ a:hover {
 
     .nav-links-desktop {
 
-        width: 50%;
+        width: 70%;
     }
 
 
@@ -157,12 +69,13 @@ a:hover {
     body {
         overflow-x: hidden;
     }
-
+    
+  
     .nav-links-desktop {
         position: absolute;
         right: 0px;
         height: 92vh;
-        top: 5.4vh;
+        top: 3.4vh;
         background-color: #54b3d6;
         display: flex;
         flex-direction: column;
@@ -176,6 +89,8 @@ a:hover {
 
     .nav-links-desktop li {
         opacity: 0;
+        
+        
     }
 
     .burger-desktop {
@@ -187,13 +102,14 @@ a:hover {
         transform: translateX(0%);
     }
 
-
     .burger-desktop div {
 
         width: 25px;
         background-color: white;
         height: 3px;
         margin: 5px;
+        transition: all  0.5s ease-in;
+
     }
 
 
@@ -212,7 +128,7 @@ a:hover {
     }
 
     .toggle .line1 {
-        transform: rotate(-45deg) translate(-5px, -6px);
+        transform: rotate(-45deg) translate(-2px, 12px);
     }
 
     .toggle .line2 {
@@ -220,7 +136,7 @@ a:hover {
     }
 
     .toggle .line3 {
-        transform: rotate(45deg) translate(-5px, -6px);
+        transform: rotate(45deg) translate(1px, -9px);
 
     }
 
@@ -228,47 +144,3 @@ a:hover {
 
 
 }
-
-
-/* css tablet */
-
-
-/* .nav-links-tablet {
-
-    position: absolute;
-    right: 0px;
-    height: 60vh;
-    top: 7vh;
-    background-color: #54b3d6;
-    width: 30%;
-
-    transform: translateX(100%);
-}
-
-.burger-tablet {
-    cursor: pointer;
-
-}
-
-.active {
-    transform: translateX(0%);
-}
-
-.nav-links-tablet li {
-
-    margin-bottom: 20px;
-    align-items: center;
-    flex-direction: column;
-    display: flex;
-
-
-}
-
-.burger-tablet div { 
-    width: 25px;
-    background-color: white;
-    height: 3px;
-    margin: 5px;
-
-}
-*/
