--- a/client/src/Components/AboutUsPage/aboutUs.css
+++ b/client/src/Components/AboutUsPage/aboutUs.css
@@ -1,27 +1,4 @@
-/* css for mobile version
 
-.root-card-class-mobile {
-    background: rgba(130, 118, 204, 0.307);
-    display: block;
-
-}
-
-.our-story-heading-mobile {
-    font-size: xxx-large;
-    font-family: math;
-    margin-bottom: 20px;
-}
-
-.our-story-text-mobile {
-    text-align: center;
-    margin-left: 20px;
-    margin-right: 20px;
-
-} */
-
-/* end of css mobile version */
-
-/* css for descktop version */
 .root-card-class-desktop {
 
     display: flex;
@@ -31,7 +8,7 @@
 
 .pets-about-us-wraper {
     margin: 55px;
-    height: 450px;
+    max-height: fit-content;
     border: solid 2px #C6E5F1;
     border-radius: 20px;
     background: rgba(150, 197, 217, 0.36);
@@ -73,26 +50,23 @@
 
     .root-card-class-desktop {
         display: block;
-    
+        
+        
     }
 
     .our-story-text-desktop {
         max-width: fit-content;
-        
         text-align: center;
         margin-left: 20px;
         margin-right: 20px;
-    
+
+    }
+
+    .our-story-img {
+        width: 80%;
+        margin-left: 4em;
     }
 
 
 }
 
-/* end of css for desktop */
-
-/* css for tablets */
-/* 
-
-
-
- */
