home-page added

--- a/client/src/Components/AboutUsPage/aboutUs.css
+++ b/client/src/Components/AboutUsPage/aboutUs.css
@@ -54,6 +54,9 @@
         
     }
 
+    .pets-about-us-wraper {
+    }
+
     .our-story-text-desktop {
         max-width: fit-content;
         text-align: center;
