--- a/client/src/Components/core/HomePage/homepage.css
+++ b/client/src/Components/core/HomePage/homepage.css
@@ -1,102 +1,77 @@
-.carousel-wrapper {
-    width: 1020px;
-    height: 550px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 5px 5px 25px 0px rgba(46, 61, 73, 0.2);
-    border-radius: 20px;
-    margin: 20px auto 20px;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+
+h3{
+  font-family: 'Poppins', sans-serif;
+}
+
+img {
+  width: 720px;
+  height: 420px;
+  border-radius: 20%;
+
+}
+
+.container {
+  height: 530px;
+  width: auto;
+  border-radius: 20%;
+  display: grid;
+  place-items: center;
+  background-color: #84bdd2;
+
+  box-shadow: 2px 1px 10px #1b3742;
+  /* border: 1px solid red; */
+}
+
+.inside-container {
+  height: auto;
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* border: 1px solid green; */
+}
+
+.inside-container button {
+  width: 150px;
+  border-radius: 20px;
+  border: 2px solid black;
+  color: white;
+  background: #F0F8FF;
+  padding: 0px;
+  text-align: center;
+  margin-top: 20px;
+  color: #171425;
+
+  box-shadow: 2px 1px 10px #54B3D6;
+  margin-bottom: 20px;
+
+}
+
+.inside-container button:active {
+  box-shadow: 2px 3px 5px black;
+}
+
+
+.wrapper {
+  display: flex;
+  align-items: center;
+  height: 555px;
+}
+
+@media screen and (max-width: 768px) {
+
+  img {
+    width: 420px;
+    height: 320px;
+    border-radius: 20%;
+
   }
   
-  .carousel-container {
-    width: 400px;
-    height: 250px;
-    overflow: hidden;
-    margin: 0 auto;
-  }
-  
-  .carousel {
-    display: flex;
-    width: 1200px;
-    animation: sliding 12s infinite;
-  }
-  .carousel div {
-    width: 400px;
-    height: 250px;
-    background-size: cover;
-    background-position: center;
-  }
-  .carousel:hover {
-    animation-play-state: paused;
-  }
-  .carousel .image-one {
-    background-image: url("https://images.unsplash.com/photo-1480936600919-bffa6b7ecf1e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60");
-  }
-  .carousel .image-two {
-    background-image: url("https://images.unsplash.com/photo-1475053081036-c8eb31d187b3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60");
-  }
-  .carousel .image-three {
-    background-image: url("https://images.unsplash.com/photo-1525278070609-779c7adb7b71?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60");
-  }
-  
-  @keyframes sliding {
-    30% {
-      transform: translateX(0);
-    }
-    35% {
-      transform: translateX(-400px);
-    }
-    65% {
-      transform: translateX(-400px);
-    }
-    70% {
-      transform: translateX(-800px);
-    }
-    98% {
-      transform: translateX(-800px);
-    }
-    100% {
-      transform: translateX(0);
-    }
-  }
-  @media screen and (max-width: 768px) {
-    .carousel-wrapper {
-      width: 312px;
-      height: 210px;
-    }
-  
-    .carousel-container {
-      width: 240px;
-      height: 150px;
-    }
-  
-    .carousel {
-      width: 720px;
-    }
-    .carousel > div {
-      width: 240px;
-      height: 150px;
-    }
-  
-    @keyframes sliding {
-      30% {
-        transform: translateX(0);
-      }
-      35% {
-        transform: translateX(-240px);
-      }
-      65% {
-        transform: translateX(-240px);
-      }
-      70% {
-        transform: translateX(-480px);
-      }
-      98% {
-        transform: translateX(-480px);
-      }
-      100% {
-        transform: translateX(0);
-      }
-    }
-  }
+
+
+
+
+
+
+}
