--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,3 @@
-@media only screen and (max-width: 768px) {
-
-
-
-
-}
-
 
 
 
@@ -12,15 +5,7 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
 
-  to {
-    transform: rotate(360deg);
-  }
-}
 
 
 .footer-content {
@@ -31,6 +16,15 @@
 
 
 .content {
+  margin-top: 15px;
+  background-color: #ECECEC;
   height: auto;
   width: auto;
+}
+
+
+@media screen and (max-width: 768px) {
+
+
+
 }
