--- a/client/src/Components/ProfileComponents/PetsCatalog/PetsCard/petsCard.css
+++ b/client/src/Components/ProfileComponents/PetsCatalog/PetsCard/petsCard.css
@@ -5,21 +5,37 @@
 } */
 .sk-chase-dot {
     width: 100%;
-height: 100%;
-position: absolute;
-left: 0;
-top: 0;
-animation: sk-chase-dot 2.0s infinite ease-in-out both; 
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    animation: sk-chase-dot 2.0s infinite ease-in-out both;
 }
 
-.pet-label-class{
-    font-weight: bold;;
+.pet-label-class {
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+
 }
 
-.pet-info-wraper{
+.info {
+  margin: 0;
+}
+
+textarea {
+    width: 180px;
+    height:80px;
+    resize: none;
+    border-radius: 10px;
+
+}
+
+.pet-info-wraper {
     text-align: center;
 }
-.pet-card-button{
+
+.pet-card-button {
     margin-left: 20px;
     margin-right: 20px;
     margin-top: 10px;
@@ -29,7 +45,7 @@ animation: sk-chase-dot 2.0s infinite ease-in-out both;
 
 }
 
-#petHeadig-class{
+#petHeadig-class {
     text-align: center;
 }
 
@@ -59,6 +75,7 @@ animation: sk-chase-dot 2.0s infinite ease-in-out both;
     border-radius: 20px;
     text-align: center;
     border: solid 2px #C6E5F1;
+
 }
 
 .pet-card-buttons {
@@ -73,7 +90,8 @@ animation: sk-chase-dot 2.0s infinite ease-in-out both;
     text-align: center;
     border: solid 2px #C6E5F1;
 }
-.pet-card-button:active{
+
+.pet-card-button:active {
     box-shadow: 2px 3px 5px black;
 
 }
@@ -95,6 +113,11 @@ animation: sk-chase-dot 2.0s infinite ease-in-out both;
 }
 
 @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
-  }
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
